project/styles/project.css
:root {
    --primary-font-family: 'Poppins', sans-serif;
    --secondary-font-family: 'Roboto', sans-serif;
    --primary-color: #e65100;
    --secondary-color: #ffc107;
    --accent-color: #1a661c;
    --neutral-background-color: #f9eddc;
    --primary-light-grey: #d8d7d7;
    --primary-dark-text-color: #000;
    --primary-light-color: #fff;
    --hero-content-bg-color: #21212195;
}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--primary-font-family);
    color: var(--primary-dark-text-color);
    max-width: 100%;
    margin: 0 auto;
    display: grid;
    grid-template: auto 1fr auto / 1fr;
    height: 100vh;
}

h1, h2, h3 {
    font-family: var(--secondary-font-family);
    color: var(--primary-color);
}

h2 {
    text-align: center;
}

header {
    background-color: var(--neutral-background-color);
    color: var(--primary-light-color);
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 1rem;
}

main {
    grid-column: 1 / 3;
    padding: 2rem 1rem;
    margin: 0 auto;
    align-self: center;
}

li {
    list-style-type: none;
}

section {
    margin-top: 2rem;
}

footer {
    grid-column: 1 / 4;
    background-color: var(--neutral-background-color);
    padding: 1rem;
    text-align: center;
    font-size: 0.6rem;
}

.logo span, .top {
    display: none;
}

.logo img {
    height: 2.5rem;
    width: 2.5rem;
    object-fit: cover;
    border-radius: 50%;
}

.menu p, .menu h3{
    text-align: left;
}

/* Navigation styles */
.nav-link{
    text-decoration: none;
    padding: 0.2rem 0.8rem;
    border-radius: 15px;
    color: var(--accent-color);
    font-weight: 500;
}

.nav-link:hover {
    background-color: var(--primary-light-color);
    color: var(--primary-color);
    transition: all 0.3s ease-in-out;
}

ul li:last-child {
    text-decoration: none;
    padding: 0.2rem 0.8rem;
    border-radius: 15px;
    color: var(--primary-dark-text-color);
    background-color: var(--primary-light-color);
    transition: all 0.3s ease-in-out;
}

/* nav responsive styles */
#menu {
    border: none;
    background-color: transparent;
    color: var(--primary-dark-text-color);
    cursor: pointer;
}

#menu::before {
    content: "☰";
}

#menu.show::before {
    content: "❌";
}

nav.show {
    position: absolute;
    top: 50px;
    left: 0rem;
    background-color: var(--neutral-background-color);
    width: 100%;
    padding: 2rem;
    height: 100vh;
    z-index: 99;
}

nav ul {
    display: none;
}

.show {
    display: block;
}

nav ul.show {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: space-between;
    gap: 6rem;
}

/* hero styles */
.hero {
    position: relative;
    margin-bottom: 2rem;
}

.hero-img {
    position: absolute;
    top: -32px;
    right: -20px;
    z-index: -1;
    object-fit: cover;
    width: 120%;
}

.hero-img img {
    width: 100%;
    height: 300px;
    object-fit: cover;
}

.hero-content{
    background-color: var(--hero-content-bg-color);
    padding: 1rem;
    margin-top: -20px;
}

.hero-content h3 {
    margin-top: 0.5rem;
}

.hero-content p {
    margin: 1rem 0;
    color: var(--primary-light-color);
}

.hero-btn {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.hero-btn button:first-child, .orange-btn {
    background-color: var(--primary-color);
    color: var(--primary-light-color);
}

.hero-btn button:first-child:hover, .orange-btn:hover {
    background-color: var(--accent-color);
}

.hero-btn button:first-child a, .orange-btn a {
    color: var(--primary-light-color);
}

button a {
    text-decoration: none;
    color: var(--primary-dark-text-color);
    font-weight: 600;
}

button {
    padding: 0.4rem 0.8rem;
    border-radius: 15px;
    border: 1px solid var(--accent-color);
    color: var(--primary-dark-text-color);
    background-color: var(--primary-light-color);
    transition: all 0.3s ease-in-out;
}

button:hover {
    background-color: var(--accent-color);
    color: var(--primary-light-color);
    transition: all 0.3s ease-in-out;
    cursor: pointer;
}

button a:hover {
    color: var(--primary-light-color);
}


/* feedback section styles */
.feedback {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.feedback > p {
    max-width: 400px;
    text-align: center;
    margin-top: 0.8rem;
}

.feedback-details {
    display: grid;
    grid-template: repeat(2, 1fr) / repeat(3, 1fr);
    margin-top: 2rem;
    grid-auto-flow: row;
    width: 80%;
}

.feedback-details > div:nth-child(2) {
    grid-column: 2/3;
    grid-row: 2/3;
}

.feedback-details > div:nth-child(3) {
    grid-column: 3;
    grid-row: 1;
}

.detail {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.detail img {
    width: 35px;
    height: 35px;
    object-fit: cover;
    border-radius: 50%;
}

.detail-text {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.detail-text p {
    margin: 0.5rem 0;
    max-width: 200px;
    text-align: center;
    font-size: 0.7rem;
}

/* featured section styles */
.featured {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

.featured > p {
    text-align: center;
    margin: 0.8rem 0;
}

.cards {
    display: grid;
    grid-template-rows: repeat(3, 1fr);
    gap: 2rem;
    margin: 2rem 0;
    width: 80%;
    margin: 1rem auto 2rem;
}

#featured.cards {
    grid-template-rows: 1fr;
}

.featured-container {
    text-align: center;
    margin: 1rem 0;
}

.card {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1rem;
    padding: 1rem;
    border-radius: 0.5rem;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
}

.card-content {
    display: flex;
    align-items: center;
    gap: 1rem;
    padding-top: 1rem;
}

.card-content img {
    width: 60px;
    height: 60px;
    object-fit: cover;
    border-radius: 50%;
}

#featured .card-content h2{
    font-size: 1.2rem;
}

#featured .card-content {
    justify-content: space-between;
}

#featured .card img {
    width: 60px;
    height: 60px;
    object-fit: cover;
}


.card-content p {
    text-align: start;
}

.card-content span {
    font-weight: 600;
    color: var(--accent-color);
}

.card-footer {
    text-align: start;
}

.card-footer span {
    font-weight: 600;
    color: var(--accent-color);
}

.sort {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: 100%;
    margin: 0 auto;
}

.search {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
    width: 100%;
}

.search input {
    width: 100%;
    border-radius: 1rem;
    padding: 0.7rem;
    font-size: 1rem;
}

.country-sort {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
    width: 100%;
}

.country-sort label {
    width: 100%;
    margin-top: 1.5rem;
}


.try-btn {
    background-color: var(--secondary-color);
    border: none;
}

.try-btn:hover {
    background-color: var(--accent-color);
}

/* newsletter section styles */
.newsletter {
    text-align: center;
    margin: 0.8rem auto;
}

.newsletter p {
    margin: 0.8rem 0;
}

/* form styles */
form {
    max-width: 600px;
    margin: 2rem auto;
    padding: 1rem;
    background-color: var(--neutral-background-color);
    box-shadow: 2px 0 10px rgba(0, 0, 0, 0.1);
    border-radius: 0.4rem;
}

fieldset {
    border: none;
}

fieldset label {
    margin-bottom: -0.5rem
}

label{
    display: block;
    margin: 0.5rem 0.6rem 1.4rem 0;
}

.review-label {
    margin-top: 1.5rem;
}

textarea {
    display: block;
    padding: 0.5rem;
    font-size: 1rem;
    border: 1px solid var(--primary-dark-color);
    border-radius: 0.4rem;
    width: 100%;
    margin-top: 0.4rem;
}

input {
    margin: 1rem 0;
}

input[type="checkbox"] {
    width: 1rem;
    height: 1rem;
    margin-right: 10px;
    margin-top: 0.4rem;
}

select, input[type="text"], input[type="date"], input[type="email"] {
    display: block;
    height: 44px;
    width: 100%;
    margin-top: 0.4rem;
    padding: 0.5rem;
    font-size: 1rem;
    border: 1px solid var(--primary-dark-color);
    border-radius: 0.4rem;
}

input[type="submit"] {
    display: block;
    width: 97%;
    margin-top: 2rem;
    padding: 0.5rem;
    font-size: 1rem;
    border: none;
    border-radius: 0.4rem;
    background-color: var(--primary-color);
    color: var(--primary-light-color);
    cursor: pointer;
}

input[type="submit"]:hover {
    background-color: var(--accent-color);
    transition: all 0.3s ease-in-out;
}

label span {
    display: inline;
    font-size: 0.8rem;
    font-style: italic;
}

small {
    color: #0000ee;
    font-size: 0.7rem;
}

/* form stars style */
input[type="radio"] {
	display: none;
	position: relative;
	caret-color: rgba(0, 0, 0, 0);
}

.stars {
	display: flex;
	flex-direction: row-reverse;
	justify-content: left;
    margin: -0.3rem 0 0 -0.3rem;
}

.stars > label {
	color: rgb(189, 172, 78);
	width: 20px;
	height: 20px;
	font-size: 2rem;
	margin-left: 5px;
	display: flex;
	align-items: center;
	caret-color: rgba(0, 0, 0, 0); /* remove blinking cursor*/
}

.stars > label:hover {
	color: #000;
    cursor: pointer;
}

.stars > label::before {
	content: "\2606";
}

.stars input:checked ~ label::before {
	content: "\2605";
}

.ref{
    font-size: 0.7rem;
    color: var(--primary-dark-color);
    margin: 1rem 1rem 1rem 0;
}

/* submission page styles */
.review-page {
    margin-top: 8rem;
}

.review-page h2 {
    color: rgb(2, 106, 2);
}

/* footer styles */
.footer-logo {
    display: none;
}

.menus {
    display: flex;
    align-items: flex-start;
    justify-content: center;
    gap: 1rem;
    margin-top: 0.8rem;
}

.socials {
    display: block;
    display: flex;
    align-items: center;
    gap: 10px;
}

.last {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 1rem;
    margin-top: 1rem;
}

.top img, .socials img {
    width: 0.8rem;
    height: 0.8rem;
    object-fit: cover;
}

